--- a/style.css
+++ b/style.css
@@ -92,11 +92,10 @@ h1 {
 
 .triangle {
 	width: 0;
-	height: 100vh;
     margin: -10px;
-	border-top: 0px solid transparent;
-	border-left: 50vw solid #003092;
-	border-bottom: 50vw solid transparent;
+	border-top: 0vh solid transparent;
+	border-left: 60vw solid #003092;
+	border-bottom: 100vh solid transparent;
 }
 
 .rickroll{
